--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ install:
 
 addons:
   postgresql: "9.3"
+  firefox: "31.0"
+
 
 before_script:
   - psql -c 'create database django_testdb;' -U postgres
