--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,12 @@ addons:
   postgresql: "9.3"
   firefox: "31.0"
 
+env:
+  global:
+    - DJANGO_SETTINGS_MODULE="superlists.settings"
 
 before_script:
   - psql -c 'create database django_testdb;' -U postgres
+  - python manage.py syncdb --noinput
 
 script: python manage.py test functional_tests
