--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
 
 env:
   global:
-    - DJANGO_SETTINGS_MODULE="superlists.settings"
+    - DJANGO_SETTINGS_MODULE="superlists.settings_tests"
     - DATABASE_URL="postgres://postgres@localhost/django_testdb"
     - DOMAIN="localhost:8081"
 
