--- a/requirements_tests.txt
+++ b/requirements_tests.txt
@@ -1,3 +1,13 @@
--r requirements.txt
-selenium
-requests
+dj-database-url==0.3.0
+dj-static==0.0.6
+Django==1.8.1
+django-postgrespool==0.3.0
+gunicorn==19.3.0
+nose==1.3.6
+psycopg2==2.6
+requests==2.7.0
+selenium==2.45.0
+SQLAlchemy==1.0.4
+static3==0.6.0
+waitress==0.8.9
+whitenoise==1.0.6
