--- a/requirements_tests.txt
+++ b/requirements_tests.txt
@@ -2,9 +2,10 @@ dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.1
 django-postgrespool==0.3.0
+EasyProcess==0.1.9
 gunicorn==19.3.0
-nose==1.3.6
 psycopg2==2.6
+PyVirtualDisplay==0.1.5
 requests==2.7.0
 selenium==2.45.0
 SQLAlchemy==1.0.4
